 /* $Id: ChangeLog,v 1.883 2000-04-12 16:35:28 cbratschi Exp $ */

 2000-04-12: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: listview: completed most version 4 features

 2000-04-10: Sander van Leeuwen <sandervl@xs4all.nl>
        - USER32: Added support for topmost windows

 2000-04-10: David Raison <djr@lemur.co.uk>
	- COMDLG32: fixed wrong lParam in file dialog

 2000-04-09: Sander van Leeuwen <sandervl@xs4all.nl>
        - GDI32: Y inversion fix for dib sections blits
	- WINMM: GetPosition fix (don't return 0 when stream not active)
	- KERNEL32: Fixed OSLibDosFindFirst. Return error if First DosFirstFirst
                    fails. (fixes RealPlayer 7 install)

 2000-04-09: Yuri Dario <mc6530@mclink.it>
	- INCLUDE(\WIN): 
		- odin.h: define NONAMELESSUNION only for VA3.0 (now works with VA4);
		          remove buildin.h when invoked from resource compiler.
		- commctrl.h: new macros
		- mmsystem.h: define DUMMYUNIONNAME with same code used in other
		              headers to avoid precompiling errors.
		- shlguid.h: missing ID
		- shlobj.h: missing shlguid.h include
		- windows.h: define CINTERFACE only for C compilers or VA3.x
		- windowsx.h: macros
		- wingdi.h: few AW defines
		- winuser.h: new macros

 2000-04-08: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: added new styles and functionality, bug fixes

 2000-04-08: Sander van Leeuwen <sandervl@xs4all.nl>
        - WINMM:    Restart, pause & underrun fixes
	- KERNEL32: Fixed bug in CompareStringW. Unicode conversion was
                    causing heap corruption. (RealPlayer 7 crashes)

 2000-04-07: Michal Necasek <mike@mendelu.cz>
        - DDRAW\NEW: Experimental fullscreen DDraw, VIDEOPMI based.
             May not work with all video cards and may cause all
             kinds of trouble. But works swell for eg. Fallout 1/2
             or HMM3. Contains some extra bugs compared to the
             windowed DDraw, ie. Moorhuhn and others don't work